# analyst

./: .env.example  .gitignore  1.5mo-opportunity-analysis.xlsx  AGENTS.md  ATLAS_SETUP_STATUS.md  CLAUDE.md  PHASE1_SUMMARY.md  README.md  clf-segment-economics.xlsx  copx-returns-model.xlsx  dashboard.jsx  miner-amplification-analysis.xlsx  package.json  pyproject.toml  requirements.txt  supply-chain-bottleneck-analysis.xlsx  thesis-reader.html  us-steel-comps.xlsx  vercel.json
.agents/: README.md  brief-template.md  data-sources.yaml  initiation.md  mcp-config.json  protocol.md  registry.md
.agents/compliance/: rules.json
.agents/playbooks/: index.yaml  sections.schema.json
.agents/research/: AGENT.md
.agents/templates/: api-routing-index.yaml  droyd-crypto-experiments.md  opinion-block.yaml  perspective-summary.md  report-structure.md  report-template.md  search-queries.md  watchlist-report-structure.md
.cursor/plans/: atlas_news_terminal_b0ff26b3.plan.md
analyst/: __init__.py  config.py  db.py  local_store.py
analyst/api/: app.py  (+2 more)
dashboard/: index.html  package.json  vite.config.js
docs/: PRD.md  README.md  ROADMAP.md  SCHEMA_VERIFICATION.md  STRUCTURE.md  SUPABASE_MCP_SETUP.md  architecture.md  framework-comparison.md  prd.md  roadmap.md  schema.md
frontend/: .gitignore  DESIGN.md  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
reports/: aspi.md  clf.md  copx.md  ech.md  leu.md  nb.md  pplt.md  rblx.md  ura.md  uuuu.md
research/: orchestration-diagram.mermaid  verify_prompt_compliance.py
tests/: test_models.py
(+209 files in other folders)
