[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analyst"
version = "0.1.0"
description = "Analyst — AI Equity Research System"
requires-python = ">=3.11"
authors = [
    {name = "Analyst", email = "noreply@analyst.local"}
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "supabase",
    "openai",
    "pydantic>=2.0",
    "pydantic-settings",
    "click",
    "pandas",
    "numpy",
    "httpx",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
analyst = "analyst.cli.main:cli"
